[project]
name = "dpws-ploter"
version = "0.1.0"
description = "Its a lybrary with tools plotting linear piecewise dinamical systems in R²"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]
